[UTF-8][Japanese]

*Ver3.10 : 2017/02/xx

-主な変更点
--メニューの構成を変更しました。
--【plugin】[g:Google AMP:AMP表示]に対応しました。
--【plugin】サイトマップに対応しました。サイトマップ(XML)を自動で生成できます。
--pop/akaneテーマを収録しました。
--IE8以前のサポートを止めました（関連コードを削除しました）。
-システム面
--nginxに正式対応しました。((以前のものでも設定次第では動きますが……))
--ページキッシュ機能を実装しました。
--jQuery 3にアップデート。
--jQuery UIをアップデート。
-入力記法
--MathJax/TeX記法を使いやすくしました。特に[https://adiary.org/v3man/Satsuki-detail/MathJax:#TeX:TeXモード]を強化しました。
--簡単に[http://adiary.org/v3man/Satsuki-tag/base:#banner:画像でリンクできる]ようになりました。（[https://twitter.com/uni_sio/status/768243697435541504:Thanks to しおこんぶ]）
--自由変数展開後に、更に記法タグを処理するよう仕様変更しました。（[http://field-city.xsrv.jp/nomura/iot/0183:Thanks to nomura]）
--自由変数定義中の記法タグが展開されるようになりました。（[http://field-city.xsrv.jp/nomura/iot/0183:Thanks to nomura]）
--figureブロック記法を追加しました。
-_top.htmlのサイドバーが反映されなかったのを修正し、その他更新しました。
-新着コメント表示を、新着コメント欄から表示した場合でも除去するようにしました。
-月別の記事一覧も、ブログ設定のコンテンツ分離を参照するようにしました。
-静的出力で、プラグインJSも自動処理するようにしました。
-管理者メニューからブログを作成するとき、存在するブログをコピーできるようになりました。
-画像を貼り付ける際、強制的に出力されていた{<figure>}タグを必要に応じて出力するようにしました。
-画像を貼り付け方法を変更しました。
-アルバムのフォームを少し改良しました。
-スマホ表示時にCSSを強制リロードさせるため、ファイルの引数に更新日時を付加するようにしました。
-Google Analyticsのコードを新しくしました。
-【plugin】プラグインイベントに #before/#after 修飾が追加されました。
-【plugin】ヘッダ検索ボックスを簡素にしました。
-【plugin】コンテンツリスト、タグリストプラグインで、階層スイッチを標準で閉じられるようにしました。
-【テーマ】テーマのオプションにデフォルト値を許可しました。
-【テーマ】rgba(255,255,255,0.7) などの形式の色カスタマイズに対応しました。
-【fix/テーマ】cuteテーマでサイドバー要素をクリックできない。
-【fix/テーマ】cuteテーマでスマホからアルバムを利用すると表示が崩れる。
-【fix】MarkdownでGMF Code Syntax（```～```）中の記法がパースされていた。
-【fix】perlキャッシュ環境で、DBの処理時間が0ms表示になり計測できないことがあった。
-【fix】CGI動作時、Text-DBで無駄な処理が発生していた。
-【fix】設定画面の「コメント許可対象」のUI動作が正しくなかった。
-【fix】テーマ表示テストの単一記事の仕様が古かった。
-【fix】スマホ表示の検索結果ボックスが横に大きすぎた。
-【fix】ドロップダウンメニューで項目がはみ出た時の表示を調整。
-【fix】ドロップダウンメニューのフリーサイズ表示が失敗してた。
-【fix】続きを読む記法使用時、最後のセクションにある注釈が短い表示の時に出力されていてた。
-【fix】HTTPリクエストヘッダの改行が LF になっていた。
-【fix/https】はてなブックマーク等の外部リソース読み込みが http: 決め打ちだった。
-【fix/plugin】子要素すべてが空タグでも、子要素展開用スイッチが出力されていた。
-【fix/スマホ】スマホメニューの5階層目以降が表示されていなかった。