@@ -1,14 +1,15 @@
 #!/usr/bin/perl
 use 5.8.1;
 use strict;
-BEGIN { unshift(@INC, './lib'); }
-use Satsuki::Base ();
+unshift(@INC, './lib');
 #-------------------------------------------------------------------------------
 # Satsuki system - Startup routine (for CGI)
-#						Copyright 2005-2013 nabe@abk
+#						Copyright (C)2005-2017 nabe@abk
 #-------------------------------------------------------------------------------
-# Last Update : 2013/07/09
-{
+# Last Update : 2017/02/10
+eval {
+	require Satsuki::Base;
+
 	#--------------------------------------------------
 	# 時間計測開始
 	#--------------------------------------------------
@@ -27,4 +28,18 @@ use Satsuki::Base ();
 
 	$ROBJ->start_up();
 	$ROBJ->finish();
+};
+
+#--------------------------------------------------
+# エラー表示
+#--------------------------------------------------
+if (!$ENV{SatsukiExit} && $@) {
+	print <<HTML;
+Status: 500 Internal Server Error
+Content-Type: text/plain; charset=UTF-8
+X-Br: <br>
+
+$@
+HTML
 }
+
