@@ -13,6 +13,21 @@ Disable_lastmod			undef
 -フォームの _bin 以外は、文字の完全性がチェックされる。
 
 
+###############################################################################
+■エラー処理の流れ
+###############################################################################
+
+-Satsuki/AutoReload.pm は正常にコンパイルできるものとする。
+
+-exitは環境により動作が変わるので使用しない（代わりにdieする）
+
+-Base.pmを読み込んだ時点で、$SIG{__DIE__} ハンドラが有効になり、
+ die 時はエラー内容を表示するようになる。
+--ただしコンパイルエラーをトラップすると、eval中でも出力してしまうため、
+  コンパイルエラーは無視している。
+--このため、eval外での use Satsuki::Base などのコンパイルエラーは
+  トラップできない（エラー表示しない）。
+
 
 ###############################################################################
 ■付録
