@@ -11,6 +11,7 @@
 -システム面
 --nginxに正式対応しました。((以前のものでも設定次第では動きますが……))
 --ページキッシュ機能を実装しました。
+--スタートアップスクリプトを更新し、エラー処理を安定させました。[bf:FastCGI運用の方はApacheかスクリプトの再起動が必要です！]
 --jQuery 3にアップデート。
 --jQuery UIをアップデート。
 -入力記法
@@ -29,6 +30,8 @@
 -アルバムのフォームを少し改良しました。
 -スマホ表示時にCSSを強制リロードさせるため、ファイルの引数に更新日時を付加するようにしました。
 -Google Analyticsのコードを新しくしました。
+-FastCGI動作時、致命的エラーで.fcgiの常駐が解除されないようになりました。
+-【環境変数】[https://adiary.org/v3man/setting/env:動作設定する環境変数名]を変更しました。
 -【plugin】プラグインイベントに #before/#after 修飾が追加されました。
 -【plugin】ヘッダ検索ボックスを簡素にしました。
 -【plugin】コンテンツリスト、タグリストプラグインで、階層スイッチを標準で閉じられるようにしました。
